fixing some Links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col-12 col-md-6 aboutMeQuestion">
                     <h1>Who am I?</h1>
                     <p>
-                        I am a 20 years old argentinian Software Engineering student at <a href="www.uba.ar">UBA</a>. <br>
+                        I am a 20 years old argentinian Software Engineering student at <a href="https://www.uba.ar" target="_blank">UBA</a>. <br>
                         I've started my journey in this Software development world last year and I want to learn the basics of FullStack technologies in order to
                         decide whether I like more FrontEnd or BackEnd.  
                     </p>
@@ -72,7 +72,7 @@
                     <p>
                         I like to play videogames, read, build PCs and learn about everything related with IT, like Math, competitive programming, hardware and electronics. <br>
                         I used to take part in Mathematical Olympics competitions when I was in High School, and now at University, I am trying to practice competitive programming. <br>
-                        I also collaborate in <a href="www.oma.org.ar">OMA</a> and <a href="https://www.oma.org.ar/mateclubes/index.php">Mateclubes</a> organization.
+                        I also collaborate in <a href="https://www.oma.org.ar" target="_blank">OMA</a> and <a href="https://www.oma.org.ar/mateclubes/index.php" target="_blank">Mateclubes</a> organization.
                     </p>
                 </div>
             </div>
