improved project structure and created README

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--Header/Introduction-->
     <div id="introductionDiv">
         <div class="container">
-            <img id="profileImg" src="profilePic.jpeg" alt="Profile Image" class="img-thumbnail rounded-circle float-start">
+            <img id="profileImg" src="images/profile-pic.jpeg" alt="Profile Image" class="img-thumbnail rounded-circle float-start">
             <h1 class="introductionHeader">Marcos Bat Mentzel.</h1>
             <h3 class="introductionHeader">Software Engineering Student.</h3>
         </div>
@@ -97,7 +97,7 @@
             <div class="row g-4">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="LinkedIn.png" class="card-img-top" alt="LinkedIn Logo">
+                        <img src="images/logos/logo-linkedin.png" class="card-img-top" alt="LinkedIn Logo">
                         <div class="card-body">
                         <h5 class="card-title">LinkedIn</h5>
                         <p class="card-text">Take a look at my professional profile and CV.</p>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="GitHub.png" class="card-img-top" alt="GitHub Logo">
+                        <img src="images/logos/logo-github.png" class="card-img-top" alt="GitHub Logo">
                         <div class="card-body">
                         <h5 class="card-title">GitHub</h5>
                         <p class="card-text">Where I'll be posting my code and proyects.</p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="Instagram.png" class="card-img-top" alt="Instagram Logo">
+                        <img src="images/logos/logo-instagram.png" class="card-img-top" alt="Instagram Logo">
                         <div class="card-body">
                         <h5 class="card-title">Instagram</h5>
                         <p class="card-text">This is my personal profile, follow me if you want!</p>
